Can now create and edit entries.

--- a/posts/templates/posts/entry_list.html
+++ b/posts/templates/posts/entry_list.html
@@ -1,7 +1,7 @@
  <ul>
    {% for post in object_list %}
      <li>
-       <a href="/post/{{post.slug}}">
+       <a href="/entry/{{post.slug}}">
          {{post.title}}
        </a>
      </li>
